Archive2/e6/918f53aa462c04/output
main.cpp: In function 'int main()':
main.cpp:12:16: error: 'clrscr' was not declared in this scope
         clrscr();
                ^
main.cpp:13:37: error: 'printf' was not declared in this scope
         printf("This is the main!\n");
                                     ^
main.cpp:16:19: error: 'gotoxy' was not declared in this scope
         gotoxy(1,9);
                   ^
main.cpp:17:27: error: 'scanf' was not declared in this scope
         scanf("%d",&choice);
                           ^
main.cpp:21:21: error: 'map' was not declared in this scope
                 map();
                     ^
main.cpp:24:20: error: 'rc' was not declared in this scope
                 rc();
                    ^
